--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,16 @@ services:
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_USER: root
+      MYSQL_PASSWORD: ${DB_ROOT_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
       - aranto-network
-
+   
   phpmyadmin:
+    env_file:
+      - .env.docker
     image: phpmyadmin:latest
     container_name: aranto-infomed-phpmyadmin
     restart: unless-stopped
@@ -25,10 +27,9 @@ services:
       - "8080:80"
     environment:
       PMA_HOST: mysql
-      PMA_USER: ${DB_USERNAME}
-      PMA_PASSWORD: ${DB_PASSWORD}
-    depends_on:
-      - mysql
+      PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: 1nf0m3d
     networks:
       - aranto-network
 
